crates/legacy_ide/src/snapshots/legacy_ide__indexer__tests__index_comment_section.snap
---
source: crates/ark/src/lsp/indexer.rs
expression: entries
---
[
    IndexEntry {
        key: "Section 1",
        range: IndexRange {
            start: IndexPoint {
                row: 1,
                column: 0,
            },
            end: IndexPoint {
                row: 1,
                column: 16,
            },
        },
        data: Section {
            level: 1,
            title: "Section 1",
        },
    },
    IndexEntry {
        key: "x",
        range: IndexRange {
            start: IndexPoint {
                row: 2,
                column: 0,
            },
            end: IndexPoint {
                row: 2,
                column: 1,
            },
        },
        data: Variable {
            name: "x",
        },
    },
    IndexEntry {
        key: "Subsection",
        range: IndexRange {
            start: IndexPoint {
                row: 4,
                column: 0,
            },
            end: IndexPoint {
                row: 4,
                column: 20,
            },
        },
        data: Section {
            level: 2,
            title: "Subsection",
        },
    },
    IndexEntry {
        key: "y",
        range: IndexRange {
            start: IndexPoint {
                row: 5,
                column: 0,
            },
            end: IndexPoint {
                row: 5,
                column: 1,
            },
        },
        data: Variable {
            name: "y",
        },
    },
    IndexEntry {
        key: "x",
        range: IndexRange {
            start: IndexPoint {
                row: 7,
                column: 0,
            },
            end: IndexPoint {
                row: 7,
                column: 1,
            },
        },
        data: Function {
            name: "x",
            arguments: [],
        },
    },
]
