crates/legacy_ide/src/snapshots/legacy_ide__indexer__tests__index_function.snap
---
source: crates/ark/src/lsp/indexer.rs
expression: entries
---
[
    IndexEntry {
        key: "my_function",
        range: IndexRange {
            start: IndexPoint {
                row: 1,
                column: 0,
            },
            end: IndexPoint {
                row: 1,
                column: 11,
            },
        },
        data: Function {
            name: "my_function",
            arguments: [
                "a",
                "b",
            ],
        },
    },
    IndexEntry {
        key: "my_variable",
        range: IndexRange {
            start: IndexPoint {
                row: 11,
                column: 0,
            },
            end: IndexPoint {
                row: 11,
                column: 11,
            },
        },
        data: Variable {
            name: "my_variable",
        },
    },
]
