crates/legacy_ide/src/snapshots/legacy_ide__indexer__tests__index_r6class_namespaced.snap
---
source: crates/ark/src/lsp/indexer.rs
expression: entries
---
[
    IndexEntry {
        key: "initialize",
        range: IndexRange {
            start: IndexPoint {
                row: 3,
                column: 8,
            },
            end: IndexPoint {
                row: 3,
                column: 18,
            },
        },
        data: Method {
            name: "initialize",
        },
    },
    IndexEntry {
        key: "class",
        range: IndexRange {
            start: IndexPoint {
                row: 1,
                column: 0,
            },
            end: IndexPoint {
                row: 1,
                column: 5,
            },
        },
        data: Variable {
            name: "class",
        },
    },
]
