crates/legacy_ide/src/snapshots/legacy_ide__indexer__tests__index_s7_methods.snap
---
source: crates/ark/src/lsp/indexer.rs
expression: entries
---
[
    IndexEntry {
        key: "Class",
        range: IndexRange {
            start: IndexPoint {
                row: 1,
                column: 0,
            },
            end: IndexPoint {
                row: 1,
                column: 5,
            },
        },
        data: Variable {
            name: "Class",
        },
    },
    IndexEntry {
        key: "generic",
        range: IndexRange {
            start: IndexPoint {
                row: 2,
                column: 0,
            },
            end: IndexPoint {
                row: 2,
                column: 7,
            },
        },
        data: Variable {
            name: "generic",
        },
    },
    IndexEntry {
        key: "method(generic, Class)",
        range: IndexRange {
            start: IndexPoint {
                row: 7,
                column: 0,
            },
            end: IndexPoint {
                row: 7,
                column: 22,
            },
        },
        data: Function {
            name: "method(generic, Class)",
            arguments: [
                "arg",
            ],
        },
    },
]
